// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  
  <select
    className="sc-bxivhb SQhGe"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 sc-ifAKCX iYUiWM"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  <label
    className="sc-bwzfXH eQhPVJ"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <select
    className="sc-bxivhb SQhGe"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 sc-ifAKCX iYUiWM"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  
  <select
    className="sc-bxivhb SQhGe"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 sc-ifAKCX iYUiWM"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  <div
    className="sc-bdVaJa kKTvpA"
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
<div
  className="sc-htpNat hxsEuH"
>
  
  <select
    className="sc-bxivhb SQhGe"
    id="dropdown"
    name="Dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  >
    <option
      disabled={true}
      value=""
    >
      Select...
    </option>
    <option
      value="fooKey"
    >
      foo
    </option>
    <option
      value="barKey"
    >
      bar
    </option>
    <option
      value="bazKey"
    >
      baz
    </option>
  </select>
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 sc-ifAKCX iYUiWM"
    style={
      Object {
        "color": "#263238",
      }
    }
  >
    keyboard_arrow_down
  </span>
  
</div>
`;
